--- a/frontend/swag/newSettings.html
+++ b/frontend/swag/newSettings.html
@@ -519,7 +519,7 @@ border-bottom-left-radius:0;
 
       <button style = "float: right; border-radius: 50%;border:1px solid #000;"type="button" class="btn btn-danger btn-xs" onclick="w3_close()">X</button><br/>
 
-  <a href="nightDash.HTML" class="w3-bar-item w3-button w3-padding-16" style = "font-size: 24px; text-align: center; font-family:'Raleway',sans-serif">home<i class="glyphicon glyphicon-home" style = "float: right;"></i></a>
+  <a href="register.html" class="w3-bar-item w3-button w3-padding-16" style = "font-size: 24px; text-align: center; font-family:'Raleway',sans-serif">register<i class="glyphicon glyphicon-home" style = "float: right;"></i></a>
   <a href="newSettings.HTML" class="w3-bar-item w3-button w3-padding-16" style = "font-size: 24px; text-align: center;font-family:'Raleway',sans-serif ">settings<i class="glyphicon glyphicon-user" style = "float: right;"></i></a>
   <a href="statistics.HTML" class="w3-bar-item w3-button w3-padding-24" style = "font-size: 24px; text-align: center;font-family:'Raleway',sans-serif">statistics<i class="glyphicon glyphicon-file" style = "float: right;"></i></a>
 </div>
@@ -607,10 +607,9 @@ border-bottom-left-radius:0;
       </div>
   <div style = "font-family:'Raleway',sans-serif">
       <br/>
-      <hr style = "margin:5px 5px; margin-left: 20%; margin-right: 20%;border:0;border-top:1px solid #000;"/></br>
-        <h5 style="text-align:center; font-size: 14px"> <u> patient/provder registry </u> </h5>
 
-      
+
+
 
 
   </div>
