updated registry page and timer on cleaning page

--- a/frontend/swag/register.html
+++ b/frontend/swag/register.html
@@ -170,6 +170,7 @@
     #wrapper{
       text-align: center;
       align-content: center;
+
     }
 
     }
@@ -273,8 +274,14 @@
     </div>
     <!-- Popup Div Ends Here -->
     </div>
-    <button style = "margin-left: 45%;" onclick = "div_show()">appointment registration</button>
-    <button onclick="show_div()">doctor registration</button>
+    <div>
+    <button style = "background-color:  #3f51b5; border: solid grey 5px; border-radius: 50%; width: 400px; height: 200px; float: right; color:white; margin-right:60%; font-size: 30px; margin-top: 100px; " onclick = "div_show()">appointment registration</button>
+  </div>
+  <br/>
+  <br/>
+  <div>
+    <button  style="background-color: #ff9900; border: solid black 5px; border-radius: 50%; width: 400px; height: 200px; float: right; color:white; margin-right:15%; font-size: 30px; margin-top: -195px; " onclick="show_div()">doctor registration</button>
+    <div>
   </div>
 
 
@@ -462,7 +469,7 @@ $.ajax({
     success: function(data) {
       $.each(data, function(i, brace)
       { //Get every entry in the NFC db that are PROVIDERS
-        $("#provider-id").append("<option class='swag' id=" +brace.provider_id +" value = " + i + ">"+ brace.provider_first_name + brace.provider_last_name + "</option>");
+        $("#provider-id").append("<option class='swag' id=" +brace.provider_id +" value = " + i + ">"+ brace.provider_first_name + " " + brace.provider_last_name + "</option>");
       });
     },
     error: function (xhr, status, error) {
