--- a/frontend/swag/clean.html
+++ b/frontend/swag/clean.html
@@ -369,6 +369,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
 
@@ -414,8 +421,8 @@
           <button style="margin-right: -15%;margin-top: 2%;float: right;z-indez: 1;overflow: none;border-radius: 50%;background-color: transparent;color: white;font-size:56px;cursor:pointer" onclick="openNav(1)">call</button>
             <div id = "layer1" style = "z-index: -1;">
 
-              <span id="secondss" style = "font-size: 128px;color: #ffffff">00</span><span style = "font-size: 48px; color: #ffffff">:</span>
-              <span id = "tenss" style = "font-size:  128px;color: #ffffff">00</span>
+              <span id="seconds" style = "font-size: 128px;color: #ffffff">00</span><span style = "font-size: 48px; color: #ffffff">:</span>
+              <span id = "tens" style = "font-size:  128px;color: #ffffff">00</span>
 
             </div>
 <br>
@@ -454,53 +461,67 @@ function w3_close() {
 }
 //END OF THE FUNCTION w3_OPEN() and w3_CLOSE()
 
-//THE FOLLOWING SCRIPT IS FOR THE ANIMATION AND TIMER ONCE YOU CLICK THE BUTTON
-//
-// Validating Empty Field
-var counter = 0;
-var isDisplayed = false;
+
+
+
+var counter = 0; //The counter is used to determine if the time should start or not.
+var isDisplayed = false; //This variable is used to explain if the start time is displayed or not. Set to false because it is originally not.
+var timeDisplayed = 0; //Time displayed is use to navigate. Because click is inside the div (clicked), must determine if the click is a START TIMER click, "call click" that should be invalid, or if it is a STOP TIMER click
+var endTimeDisplayed = false; //This variableis used to explain if the end time is displayed or not. Set to false because it is originally not.
+
 window.onload = function () {
 
 var seconds = 00;
 var tens = 00;
 
 
-var appendTens = document.getElementById("tenss")
-var appendSeconds = document.getElementById("secondss")
+
+var appendTens = document.getElementById("tens");
+var appendSeconds = document.getElementById("seconds");
 var buttonStart = document.getElementById('contentPage');
 var buttonStop = document.getElementById('button-stop');
 var buttonReset = document.getElementById('button-reset');
-var Interval ;
+
+var Interval;
+var hour;
+var minute;
+var second;
 
 
 //This function clears the interval for the minutes and starts the timer.
-contentPage.onclick = function()
+$('#CleaningPage').click(function()
 {
-  isDisplayed = true;
-  counter++;
-  if (counter % 2 !== 0){
-   clearInterval(Interval);
-   Interval = setInterval(startTimer, 1000);
- }
- else {
+  var date = new Date();  //Sets a new date and time...
+  if (timeDisplayed === 0 && isDisplayed === false) //If the div should be a START TIMER click and the start time has not been displayed yet.
+  {
+    hour = date.getHours(); //Get the hour in the time.
+    minute = date.getMinutes(); //Get minyy
+    second = date.getSeconds(); //Get secs
+
+    isDisplayed = true;
+    counter++;
+    timeDisplayed = 2;
+    if (counter % 2 !== 0){
+     clearInterval(Interval);
+     Interval = setInterval(startTimer, 1000);
+   }
+  }
+  else if (timeDisplayed === 1){
+    timeDisplayed = 2;
+  }
+else if (endTimeDisplayed === false && timeDisplayed === 2) {
+  endTimeDisplayed = true;
+   var date2 = new Date();
    clearInterval(Interval);
    isDisplayed = false;
+   hour2 = date2.getHours();
+   minute2 = date2.getMinutes();
+   second2 = date2.getSeconds();
+
  }
-}
-//This stops the interval.
-buttonStop.onclick = function() {
-     clearInterval(Interval);
-}
-//This function resets the timer.
-buttonReset.onclick = function() {
- clearInterval(Interval);
-  tens = "00";
-  seconds = "00";
 
-  appendTens.innerHTML = tens;
-  appendSeconds.innerHTML = seconds;
+});
 
-}
 //THE FOLLOWING FUNCTION IS THE TIMER ALGORITHM TO MAKE IT COUNT UP.
 function startTimer () {
   tens++;
@@ -541,42 +562,38 @@ document.getElementById('abc').style.display = "none";
 //END OF THE FOLLOWING SCRIPT THAT WORKS FOR THE POPUP!!!!
 
 function openNav(number) {
-  counter = counter + 1;
+  timeDisplayed = 1;
+  counter = counter + 2;
   if (isDisplayed === false){
     document.getElementById("myNav").style.height = "100%";
+  }
 
-  }
-  if (number === 1){
+  document.getElementById("myNav").style.background = "#82CAFA";
 
-    document.getElementById("myNav").style.background = "rgba(135,206,250, 1)";
-  }
-  else if (number === 2){
 
-    document.getElementById("myNav").style.background = "rgba(52, 152, 219, 1)";
-  }
-  else if (number === 3){
-    document.getElementById("myNav").style.background = "rgba(46, 204, 113, 1)";
-  }
-  else if (number === 4)
-  {
-    document.getElementById("myNav").style.background = "rgba(155, 89, 182, 1)";
-  }
-  else if (number === 5)
-  {
-    document.getElementById("myNav").style.background = "rgba(241, 196, 15, 1)";
-  }
-  else if (number === 6)
-  {
-    document.getElementById("myNav").style.background = "rgba(52, 73, 94, 1)";
-  }
+
+
 }
 
-
-
-
-
-function closeNav() {
+function closeNav()
+{
+    counter = counter + 2;
+    if (isDisplayed === true){
+      timeDisplayed = 2;
+    }
+    else{
+      timeDisplayed = 0;
+    }
     document.getElementById("myNav").style.height = "0%";
+
+}
+
+function warnUser(){
+  var r = confirm("Are you sure you would like to end the appointment?");
+  if (r === true){
+    window.location.href = "clean.html";
+  }
+
 
 }
 </script>
