settings page with fixed alignment

--- a/frontend/swag/newSettings.html
+++ b/frontend/swag/newSettings.html
@@ -171,19 +171,33 @@ border-bottom-left-radius:0;
       <p style = "text-align: center;font-size: 14px;"><u>change flag color</u></p>
       <h3 style="margin-left: 45%;margin-bottom: 20px; font-size: 16px;"> select a color for this flag: </h3></br>
 
-    </div>
-      <div id="color-display" style = "margin-left: 53%;">
 
-      </div>
 
       <!--<select class= "selectpicker" style = "margin-left: 47%;">-->
-      <div style="background-color: white; width: 9%;margin-left:700px; margin-top: -130px;">
+      <div style="background-color: white; width: 9%;margin-left:730px; margin-top: -130px;">
+        <div id="color-display" style = "margin-left: 175px; margin-top: 200px;">
+
+        </div>
+      <div style="margin-top: -200px; margin-right: 100px;">
+        <div>
         <button id="yellow" class="color-button" style="background-color: #FFFF00"></button>
+      </div>
+      <div>
         <button id="blue" class="color-button" style="background: #0000ff"></button>
+      </div>
+      <div>
         <button id="orange" class="color-button" style ="background: #FFA500"></button>
+      </div>
+      <div>
         <button id="red" class="color-button" style="background :#FF0000"></button>
+      </div>
+      <div>
         <button id="white" class="color-button" style="background :#FFFFFF"></button>
+      </div>
+      <div>
         <button id="black" class="color-button" style= "background :#000000"></button>
+      </div>
+    </div>
       </div>
 
       <!--</select></br>-->
